# 42SH

./: .gitignore  Doc.md  Makefile.am  README.md  configure.ac
src/: 42sh.c  Makefile.am  scrip.sh  script.sh  t
src/ast/: Makefile.am  ast.c  ast.h  ast_and_or.c  ast_case_clause.c  ast_case_item.c  ast_command.c  ast_compound_list.c  ast_else_clause.c  ast_funcdec.c  ast_input.c  ast_list.c  ast_pipeline.c  ast_prefix.c  ast_redir.c  ast_rule_case.c  ast_rule_for.c  ast_rule_if.c  ast_rule_until.c  ast_rule_while.c  ast_shell_command.c  ast_simple_command.c
src/ast/tests/: ast_print.c  testsuite.sh
src/builtin/: Makefile.am  boolean.c  break.c  builtin.h  cd.c  continue.c  echo.c  echo.h  exit.c  export.c  unset.c
src/eval/: Makefile.am  eval.c  eval.h  eval_and_or.c  eval_command.c  eval_compound_list.c  eval_else_clause.c  eval_input.c  eval_list.c  eval_pipeline.c  eval_prefix.c  eval_rule_if.c  eval_shell_command.c  eval_simple_command.c
src/eval_exec/: Makefile.am  eval.h  eval_and_or.c  eval_case.c  eval_command.c  eval_command_blocks.c  eval_compound_list.c  eval_else_clause.c  eval_funcdec.c  eval_list.c  eval_pipeline.c  eval_prefix.c  eval_redir.c  eval_redirection.c  eval_rule_case.c  eval_rule_for.c  eval_rule_until.c  eval_rule_while.c  eval_shell_command.c  eval_simple_command.c  eval_subshell.c  execution.h  execution_builtin.c  execution_pipeline.c  execution_redir.c  execution_simple_command.c  execution_vp.c
src/execution/: Makefile.am  execution.c  execution.h  execution_builtin.c  execution_pipeline.c  execution_redirection.c  execution_shell_command.c  execution_simple_command.c  execution_vp.c
src/expansion/: Makefile.am  expansion.c  expansion.h
src/io_back_end/: Makefile  Makefile.am  echo.sh  io_back_end.c  io_back_end.h  main.c  test.sh
src/lexer/: Makefile.am  lexer.c  lexer.h  test  token.h
src/lexer/tests/: lexer  testsuite.sh  token_printer.c
src/parser/: Makefile.am  parser.c  parser.h  parser_and_or.c  parser_case_clause.c  parser_case_item.c  parser_command.c  parser_compound_list.c  parser_element.c  parser_else_clause.c  parser_funcdec.c  parser_input.c  parser_list.c  parser_pipeline.c  parser_prefix.c  parser_redir.c  parser_rule_case.c  parser_rule_for.c  parser_rule_if.c  parser_rule_until.c  parser_rule_while.c  parser_shell_command.c  parser_simple_command.c
src/parser/tests/: parser_test.c  test
src/token/: Makefile.am  token.c  token.h
tests/: Makefile.am  pokemon.sh  test.sh  testsuite.sh  testsuite_and_or.sh  testsuite_and_or_file.sh  testsuite_and_or_input.sh  testsuite_and_or_redir.sh  testsuite_and_or_string.sh  testsuite_block_file.sh  testsuite_block_input.sh  testsuite_block_redir.sh  testsuite_block_string.sh  testsuite_coverage.sh  testsuite_echo.sh  testsuite_echo_input.sh  testsuite_echo_redir.sh  testsuite_echo_string.sh  testsuite_error.sh  testsuite_error_file.sh  testsuite_error_input.sh  testsuite_error_redir.sh  testsuite_error_string.sh  testsuite_execvp.sh  testsuite_execvp_file.sh  testsuite_execvp_input.sh  testsuite_execvp_redir.sh  testsuite_execvp_string.sh  testsuite_file.sh  testsuite_if.sh  testsuite_if_file.sh  testsuite_if_input.sh  testsuite_if_redir.sh  testsuite_if_string.sh  testsuite_pipe.sh  testsuite_pipeline.sh  testsuite_pipeline_file.sh  testsuite_pipeline_input.sh  testsuite_pipeline_redir.sh  testsuite_pipeline_string.sh  (+9 more)
tests/and_or/: testsuite_and_or_file.sh  testsuite_and_or_input.sh  testsuite_and_or_redir.sh  testsuite_and_or_string.sh
tests/ast/: Makefile.am  test_ast.c  testsuite.sh
tests/block/: testsuite_block_file.sh  testsuite_block_input.sh  testsuite_block_redir.sh  testsuite_block_string.sh
tests/builtin/: Makefile.am  test_builtin_boolean.c  test_builtin_echo.c  testsuite_builtin_file.sh  testsuite_builtin_input.sh  testsuite_builtin_redir.sh  testsuite_builtin_string.sh
tests/case/: testsuite_case_file.sh  testsuite_case_input.sh  testsuite_case_redir.sh  testsuite_case_string.sh
tests/echo/: testsuite_echo_file.sh  testsuite_echo_input.sh  testsuite_echo_redir.sh  testsuite_echo_string.sh
tests/error/: testsuite_error_file.sh  testsuite_error_input.sh  testsuite_error_redir.sh  testsuite_error_string.sh
tests/execvp/: testsuite_execvp_file.sh  testsuite_execvp_input.sh  testsuite_execvp_redir.sh  testsuite_execvp_string.sh
tests/for/: testsuite_for_file.sh  testsuite_for_input.sh  testsuite_for_redir.sh  testsuite_for_string.sh
tests/if/: testsuite_if_file.sh  testsuite_if_input.sh  testsuite_if_redir.sh  testsuite_if_string.sh
tests/io_back_end/: Makefile.am  test.sh  test_io_back_end.c  testsuite.sh
tests/lexer/: Makefile.am  test_lexer.c  testsuite.sh
tests/others/: bones.sh  testsuite_coverage.sh  testsuite_pokemon.sh
tests/parser/: Makefile.am  test_parser.c
tests/pipeline/: testsuite_pipeline_file.sh  testsuite_pipeline_input.sh  testsuite_pipeline_redir.sh  testsuite_pipeline_string.sh
tests/redirection/: testsuite_redirection_file.sh  testsuite_redirection_input.sh  testsuite_redirection_redir.sh  testsuite_redirection_string.sh
tests/rword/: testsuite_rword_file.sh  testsuite_rword_input.sh  testsuite_rword_redir.sh  testsuite_rword_string.sh
tests/until/: testsuite_until_file.sh  testsuite_until_input.sh  testsuite_until_redir.sh  testsuite_until_string.sh
tests/variables/: testsuite_variables_file.sh  testsuite_variables_input.sh  testsuite_variables_redir.sh  testsuite_variables_string.sh
tests/while/: testsuite_while_file.sh  testsuite_while_input.sh  testsuite_while_redir.sh  testsuite_while_string.sh
